--- a/modules/openapi-generator/src/main/resources/gdscript-client/api.mustache
+++ b/modules/openapi-generator/src/main/resources/gdscript-client/api.mustache
@@ -16,8 +16,8 @@ var request_type
 
 var busy = false
 
+# TODO generate list of model filenames
 @include "model/model_api.gd.inc"
-
 
 {{#operations}}
 {{#operation}}
