--- a/modules/openapi-generator/src/main/resources/gdscript-client/model.mustache
+++ b/modules/openapi-generator/src/main/resources/gdscript-client/model.mustache
@@ -1,8 +1,9 @@
 {{#models}}
 {{#model}}
-const {{classname}} = [{{#vars}}'{{name}}'{{#hasMore}}, {{/hasMore}}{{/vars}}]
-@define __{{classname}}__body {{#vars}}{{name}}{{#hasMore}}, {{/hasMore}}{{/vars}}
-@define __{{classname}}__array {{#vars}}{{name}}{{#hasMore}}, {{/hasMore}}{{/vars}}
-@define __{{classname}}__dict {{#vars}}{{name}}={{name}}{{#hasMore}}, {{/hasMore}}{{/vars}}
+classname {{classname}}
+const {{classname}}= [{{#vars}}'{{name}}'{{#hasMore}}, {{/hasMore}}{{/vars}}]
+const body {{#vars}}{{name}}{{#hasMore}}, {{/hasMore}}{{/vars}}
+const array {{#vars}}{{name}}{{#hasMore}}, {{/hasMore}}{{/vars}}
+const dict {{#vars}}{{name}}={{name}}{{#hasMore}}, {{/hasMore}}{{/vars}}
 {{/model}}
 {{/models}}
