--- a/modules/openapi-generator/src/main/resources/gdscript-client/api.mustache
+++ b/modules/openapi-generator/src/main/resources/gdscript-client/api.mustache
@@ -33,8 +33,12 @@ var unirest = preload("../unirest.gd")
 {{/allParams}}
 """
 
-func {{operationId}}({{#sortParamsByRequiredFlag}}{{#allParams}}{{#required}}{{dataType}} {{paramName}}, {{/required}}{{#optional}}{{dataType}} {{paramName}} = null{{/optional}}{{/allParams}}{{/sortParamsByRequiredFlag}} auth = null, callback = null):   
-    unirest.{{#lambda.lowercase}}{{httpMethod}}{{/lambda.lowercase}}(base_url + "{{path}}", { {{#headerParams}}{{paramName}}={{paramName}}{{^-last}}, {{/-last}}{{/headerParams}} }, { {{#bodyParams}}JSON.print({{paramName}}.dict){{#hasMore}}, {{/hasMore}}{{/bodyParams}} }, auth, callback)
+func {{operationId}}({{#sortParamsByRequiredFlag}}{{#allParams}}{{#required}}{{dataType}} {{paramName}}, {{/required}}{{#optional}}{{dataType}} {{paramName}} = null{{/optional}}{{/allParams}}{{/sortParamsByRequiredFlag}} header = {}, auth = null, callback = null):
+    var params : String = {}
+    {{#bodyParams}}
+    params = JSON.print({{paramName}}.dict){{#hasMore}}, {{/hasMore}}
+    {{/bodyParams}}
+    unirest.{{#lambda.lowercase}}{{httpMethod}}{{/lambda.lowercase}}(base_url + "{{path}}", params, header, auth, callback)
 
 {{/operation}}
 {{/operations}}
