Update gdscript docs.

--- a/modules/openapi-generator/src/main/resources/gdscript-client/api_doc.mustache
+++ b/modules/openapi-generator/src/main/resources/gdscript-client/api_doc.mustache
@@ -25,11 +25,11 @@ var {{classVarName}} = load("res://addons/{{{packageName}}}/apis/{{classVarName}
 
 func _ready():
 	var {{classVarName}} = {{classVarName}}.new()
-	res.name = "{{classVarName}}"
-	add_child(res)	
-	res.connect("api_{{{operationId}}}", self, "api_{{{operationId}}}")
-	res.base_url = "{{basePath}}"
-	res.{{{operationId}}}({{#allParams}}{{#required}}{{paramName}}{{/required}}{{^required}}{{paramName}}={{paramName}}{{/required}}{{#hasMore}}, {{/hasMore}}{{/allParams}})
+	{{classVarName}}.name = "{{classVarName}}"
+	add_child({{classVarName}})	
+	{{classVarName}}.connect("api_{{{operationId}}}", self, "api_{{{operationId}}}")
+	{{classVarName}}.base_url = "{{basePath}}"
+	{{classVarName}}.{{{operationId}}}({{#allParams}}{{#required}}{{paramName}}{{/required}}{{^required}}{{paramName}}={{paramName}}{{/required}}{{#hasMore}}, {{/hasMore}}{{/allParams}})
 	
 func api_{{{operationId}}}(result):
 	print(result)
